@@ -151,6 +151,7 @@
                     <argLine>
                         --add-opens java.base/java.util=ALL-UNNAMED
                         --add-opens java.base/java.lang=ALL-UNNAMED
+                        -Djava.security.manager=allow
                     </argLine>
                     <environmentVariables>
                         <SET_BY_SUREFIRE>YES</SET_BY_SUREFIRE>
@@ -185,7 +186,7 @@
         <jacoco.version>0.8.11</jacoco.version>
         <system-rules.version>1.19.0</system-rules.version>
         <system-lambda.version>1.0.0</system-lambda.version>
-        <system-stubs.version>2.1.3</system-stubs.version>
+        <system-stubs.version>2.1.6</system-stubs.version>
         <testng.version>7.8.0</testng.version>
         <junit.pioneer.version>2.1.0</junit.pioneer.version>
         <spotbugs-maven-plugin.version>4.8.5.0</spotbugs-maven-plugin.version>
